--- a/final project.ipynb
+++ b/final project.ipynb
@@ -20,14 +20,14 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Solution Methods for Hyperbolic PDEs"
+      "Solution Methods for 1-D Hyperbolic PDEs"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Welcome to *No Speeding Allowed: Solution Methods for Hyperbolic PDEs*, an individual contribution to  [Practical Numerical Methods with Python](http://openedx.seas.gwu.edu/courses/GW/MAE6286/2014_fall/about) by Chase Johnson."
+      "Welcome to *No Speeding Allowed*, an individual contribution to  [Practical Numerical Methods with Python](http://openedx.seas.gwu.edu/courses/GW/MAE6286/2014_fall/about) focusing on solution methods for hyperbolic PDEs by Chase Johnson."
      ]
     },
     {
@@ -42,10 +42,184 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We know that the general form of second order partial differential equations is: \\n\n",
-      "$a\\frac{\\partial^2u}{\\partial x^2}+b\\frac{\\partial^2 u}{\\partial x y}+c\\frac{\\partial^2u}{\\partial y^2}+d\\frac{\\partial u}{\\partial x}+e\\frac{\\partial u}{\\partial y}+fu=g$ \\n\n",
-      "The PDE is said to be hyperbolic if $b^2-4ac>0$."
+      "We know that the general form of a second order PDE is <br/>\n",
+      "$a\\frac{\\partial^2 u}{\\partial x^2}+b\\frac{\\partial^2 u}{\\partial x y}+c\\frac{\\partial^2 u}{\\partial y^2}+d\\frac{\\partial u}{\\partial x}+e\\frac{\\partial u}{\\partial y}+fu=g$"
      ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "If $b^2-4 a c >0$ the PDE is defined as hyperbolic and has wave-like solutions.  This is the reason that hyperbolic PDEs are often referred to as \"wave equations.\"<br/>\n",
+      "One of the most important aspects of wave equations that distinguish them from parabolic PDEs (Heat Equation) and elliptical PDEs (Laplace's Equation) is that information or disturbances are transmitted through space-time at a defined speed, hence the title of this lesson.  I encourage you to read further on hyperbolic PDEs and [Wikipedia](http://en.wikipedia.org/wiki/Hyperbolic_partial_differential_equation) has an excellent article."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Where do we see Hyperbolic PDEs"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "We have already seen that looking at diffusion will yield parabolic PDEs, but where would we find natural phenomena that would yield hyperbolic PDEs?"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -211,14 +385,6 @@
       }
      ],
      "prompt_number": 4
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     }
    ],
    "metadata": {}
