Commencing Write Up

--- a/final project.ipynb
+++ b/final project.ipynb
@@ -27,7 +27,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Welcome to *No Speeding Allowed*, an individual contribution to  [Practical Numerical Methods with Python](http://openedx.seas.gwu.edu/courses/GW/MAE6286/2014_fall/about) focusing on solution methods for hyperbolic PDEs by Chase Johnson."
+      "Welcome to *No Speeding Allowed*, an individual contribution to  [Practical Numerical Methods with Python](http://openedx.seas.gwu.edu/courses/GW/MAE6286/2014_fall/about) focusing on solution methods for hyperbolic PDEs by Chase Johnson.  In this first module we will focus on an explicit finite difference method.  In [previous discussions](http://nbviewer.ipython.org/github/numerical-mooc/numerical-mooc/blob/master/lessons/04_spreadout/01_Heat_Equation_1D_Explicit.ipynb), we've learned that explicit schemes have stability requirements but they are easier to understand and is how we will be introducing second order hyperbolic PDEs.  In the next module, we will graduate to an implicit method that is more complicated, but is unconditionally stable! "
      ]
     },
     {
@@ -50,7 +50,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "If $b^2-4 a c >0$ the PDE is defined as hyperbolic and has wave-like solutions.  This is the reason that hyperbolic PDEs are often referred to as \"wave equations.\"<br/>\n",
+      "If $b^2-4 a c >0$, the PDE is defined as hyperbolic and has wave-like solutions.  This is the reason that hyperbolic PDEs are often referred to as \"wave equations.\"<br/>\n",
       "One of the most important aspects of wave equations that distinguish them from parabolic PDEs (Heat Equation) and elliptical PDEs (Laplace's Equation) is that information or disturbances are transmitted through space-time at a defined speed, hence the title of this lesson.  I encourage you to read further on hyperbolic PDEs and [Wikipedia](http://en.wikipedia.org/wiki/Hyperbolic_partial_differential_equation) has an excellent article."
      ]
     },
@@ -70,44 +70,44 @@
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": []
+     "source": [
+      "The most well known second order hyperbolic equation is the wave equation,<br/> $\\frac{\\partial^2 u}{\\partial t^2} = c^2\\frac{\\partial^2 u}{\\partial x^2}$<br/> and we will study variations of this equation in this section.  Dr. Joel Feldman from the University of British Columbia has a very well written derivation of the wave equation that you can find [here](http://www.math.ubc.ca/~feldman/m256/wave.pdf).  You can also find derivations in References [Brown, Asmar]."
+     ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "heading",
+     "level": 2,
      "metadata": {},
-     "outputs": []
+     "source": [
+      "Defining the Problem"
+     ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": []
+     "source": [
+      "Let's say that we have a string of length $L$ that is fixed at both ends and has a wave speed of $c$.  We've already decided what our boundary conditions are, but what about our initial conditions?  What options could we have?  "
+     ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": []
+     "source": [
+      "The most common is to define an initial position and an initial velocity so our final problem statement is<br/>\n",
+      "$\\frac{\\partial^2 u}{\\partial t^2} = c^2\\frac{\\partial^2 u}{\\partial x^2}$ <br/> \n",
+      "With boundary conditions: $u(0,t) = u(L,t) = 0$ <br/> \n",
+      "And initial conditions: $u(x,0) = f(x)$ and $\\frac{\\partial u}{\\partial t} = g(x)$"
+     ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "heading",
+     "level": 2,
      "metadata": {},
-     "outputs": []
+     "source": [
+      "Explicit Finite Difference"
+     ]
     },
     {
      "cell_type": "code",
