--- a/final project.ipynb
+++ b/final project.ipynb
@@ -110,52 +110,54 @@
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": []
+     "source": [
+      "So we have two second order terms in our governing equation.  We also have a first order term in in our initial conditions, but we'll get to that later.  We need to match our numerical scheme with the physics of our problem.  We know that waves can travel in either direction, so we don't want to introduce a numerical bias that is only forward or backwards.  We will start by discretizing our governing equation with central difference in both time and space."
+     ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": []
+     "source": [
+      "Recall that the central difference approximation for a second order derivative is:<br/>\n",
+      "$\\frac{d^2 u}{ds^2} \\approx \\frac{u_{i+1}-2u_i+u_{i-1}}{\\Delta s^2}$<br/>\n",
+      "Using this definition, rewrite our discretized governing equation and solve for $u_i^{n+1}$."
+     ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": []
+     "source": [
+      "Using this definition, let's rewrite our discretized governing equation and solve for $u_i^{n+1}$.  We'll step through it together the first time."
+     ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": []
+     "source": [
+      "Initially rewriting the derivative terms will give us:<br/>\n",
+      "$\\frac{u_i^{n+1}-2u_i^n+u_i^{n-1}}{\\Delta t^2} = c^2\\frac{u_{i+1}^n-2u_i^n+u_{i-1}^n}{\\Delta t^2}$<br/>\n",
+      "If we make the following substiution, $\\lambda = \\frac{c\\Delta t}{\\Delta x}$, and solve for $u_i^{n+1}$, we get:<br/>\n",
+      "$u_i^{n+1} = 2u_i^n(1-\\lambda^2)+\\lambda^2(u_{i+1}^n+u_{i-1}^n)-u_i^{n-1}$<br/>\n",
+      "Be sure that you can get the same result before moving on."
+     ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": []
+     "source": [
+      "If you notice, our discretized governing equation will require values from the previous two time steps meaning that our method is not self starting.  So just like Congress, we are going to have to give it a kickstart to get any meaningful work out of it.  But unlike Congress, our method will continue to work until we tell it to stop!"
+     ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": []
+     "source": [
+      "Let's take a look at our $t=0$ array, or $u[0,:]$.  This is where our initial position will be stored.<br/>\n",
+      "We can easily accomplish this by simply forcing $u(x,0)=f(x)$ or in Python-speak, $u[0,:]=f(x)$.<br/>\n",
+      "But this only takes care of the first array, and our method will require not only $u[0,:]$ to be populated but also $u[1,:]$ to be populated."
+     ]
     },
     {
      "cell_type": "code",
