Ready for Coding Portion

--- a/final project.ipynb
+++ b/final project.ipynb
@@ -156,16 +156,19 @@
      "source": [
       "Let's take a look at our $t=0$ array, or $u[0,:]$.  This is where our initial position will be stored.<br/>\n",
       "We can easily accomplish this by simply forcing $u(x,0)=f(x)$ or in Python-speak, $u[0,:]=f(x)$.<br/>\n",
-      "But this only takes care of the first array, and our method will require not only $u[0,:]$ to be populated but also $u[1,:]$ to be populated."
+      "But this only takes care of the first array, and our method will require not only $u[0,:]$ to be populated but also $u[1,:]$ to be populated.  Hmmm...what to do, what to do.<br/>\n",
+      "We still have an initial condition that we haven't used yet, $\\frac{\\partial u(x,0)}{\\partial t}=g(x)$."
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": []
+     "source": [
+      "Using another finite difference, we can approximate $\\frac{\\partial u[0,:}{\\partial t}=\\frac{u[1,:]-u[0,:]}{\\Delta x}$ or,<br/>\n",
+      "$u[1,:]=u[0,:]+\\Delta xg[:]$<br/>\n",
+      "Now we have numerical solutions for our first and second time steps.  All that is left is to program a loop to start populating the third time step based on the first to and to continue until our final time!<br/>\n",
+      "We've already seen this before, so let's dive right in."
+     ]
     },
     {
      "cell_type": "code",
