--- a/final project.ipynb
+++ b/final project.ipynb
@@ -154,9 +154,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Let's take a look at our $t=0$ array, or $u[0,:]$.  This is where our initial position will be stored.<br/>\n",
-      "We can easily accomplish this by simply forcing $u(x,0)=f(x)$ or in Python-speak, $u[0,:]=f(x)$.<br/>\n",
-      "But this only takes care of the first array, and our method will require not only $u[0,:]$ to be populated but also $u[1,:]$ to be populated.  Hmmm...what to do, what to do.<br/>\n",
+      "Let's take a look at our $t=0$ array.  This is where our initial position will be stored.<br/>\n",
+      "We can easily accomplish this by simply forcing $u(x,0)=f(x)$.<br/>\n",
+      "But this only takes care of the first array, and our method will require not only $u(0,x)$ to be populated but also $u(1,x)$ to be populated.  Hmmm...what to do, what to do.<br/>\n",
       "We still have an initial condition that we haven't used yet, $\\frac{\\partial u(x,0)}{\\partial t}=g(x)$."
      ]
     },
@@ -164,27 +164,31 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Using another finite difference, we can approximate $\\frac{\\partial u[0,:}{\\partial t}=\\frac{u[1,:]-u[0,:]}{\\Delta x}$ or,<br/>\n",
-      "$u[1,:]=u[0,:]+\\Delta xg[:]$<br/>\n",
-      "Now we have numerical solutions for our first and second time steps.  All that is left is to program a loop to start populating the third time step based on the first to and to continue until our final time!<br/>\n",
-      "We've already seen this before, so let's dive right in."
+      "Using another finite difference, we can approximate $\\frac{\\partial u[0,x]}{\\partial t}=\\frac{u[1,x]-u[0,x]}{\\Delta x}$ or,<br/>\n",
+      "$u[1,x]=u[0,x]+\\Delta x g(x)$<br/>\n",
+      "Now we have numerical solutions for our first and second time steps.  But...we have a problem.<br/>\n",
+      "Did you notice that our approximation for the initial condition is only first order accurate and our governing equation has second order accuracy?  This means that our second time step, or $u[1,:]$ will be less accurate and will feed our iterative loop.  We can do better than this, right?"
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": []
+     "source": [
+      "We can derive a $\\mathcal{O}(2)$ approximation for our first time step by considering the series expansion of $u(1,x)$, our second time step around our first time step, $u(0,x)$, which by definition would be a Maclaurin expansion.<br/>$u(1,x)=u(0,x)+\\Delta t\\frac{\\partial}{\\partial t} u(0,x)+\\frac{\\Delta t^2}{2}\\frac{\\partial^2}{\\partial t^2} u(0,x)+\\mathcal{O}(\\Delta t^3)$<br/>\n",
+      "Now we have our $\\mathcal{O}(2)$ expression for $u[1,:]$, but we need to find expressions for the terms $\\frac{\\partial}{\\partial t} u(0,x)$ and $\\frac{\\partial^2}{\\partial t^2} u(0,x)$<br/>\n",
+      "Using our governing equation we can show that $\\frac{\\partial^2}{\\partial t^2}u(0,x) = c^2f\"(x)$ and by definition $\\frac{\\partial}{\\partial t}u(0,x)=g(x)$<br/>\n",
+      "Finally, we can get an expression for $u[1,:]$ that is $\\mathcal{O}(2)$ accurate.  Derive this yourself.<br/>\n",
+      "Hint: Since we don't want to assume that $f\"(x)$ necessarily exists, break it into another central difference approximation.  You will find:<br/>\n",
+      "$u(1,x_i) = (1-\\lambda^2)f(x_i)+\\frac{\\lambda^2}{2}(f(x_{i+1})+f(x_{i-1})+\\Delta t g(x)$"
+     ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": []
+     "source": [
+      "All that is left is to program a loop to start populating the third time step based on the first two and to continue until our final time!<br/>\n",
+      "We've already seen this before, so let's dive right in."
+     ]
     },
     {
      "cell_type": "code",
