--- a/final project.ipynb
+++ b/final project.ipynb
@@ -42,14 +42,8 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We know that the general form of a second order PDE is <br/>\n",
-      "$a\\frac{\\partial^2 u}{\\partial x^2}+b\\frac{\\partial^2 u}{\\partial x y}+c\\frac{\\partial^2 u}{\\partial y^2}+d\\frac{\\partial u}{\\partial x}+e\\frac{\\partial u}{\\partial y}+fu=g$"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
+      "We know that the general form of a second order PDE is <br/><br/>\n",
+      "$a\\frac{\\partial^2 u}{\\partial x^2}+b\\frac{\\partial^2 u}{\\partial x y}+c\\frac{\\partial^2 u}{\\partial y^2}+d\\frac{\\partial u}{\\partial x}+e\\frac{\\partial u}{\\partial y}+fu=g$<br/><br/>\n",
       "If $b^2-4 a c >0$, the PDE is defined as hyperbolic and has wave-like solutions.  This is the reason that hyperbolic PDEs are often referred to as \"wave equations.\"<br/>\n",
       "One of the most important aspects of wave equations that distinguish them from parabolic PDEs (Heat Equation) and elliptical PDEs (Laplace's Equation) is that information or disturbances are transmitted through space-time at a defined speed, hence the title of this lesson.  I encourage you to read further on hyperbolic PDEs and [Wikipedia](http://en.wikipedia.org/wiki/Hyperbolic_partial_differential_equation) has an excellent article."
      ]
@@ -73,7 +67,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The most well known second order hyperbolic equation is the wave equation,<br/> $\\frac{\\partial^2 u}{\\partial t^2} = c^2\\frac{\\partial^2 u}{\\partial x^2}$<br/> and we will study variations of this equation in this section.  Dr. Joel Feldman from the University of British Columbia has a very well written derivation of the wave equation that you can find [here](http://www.math.ubc.ca/~feldman/m256/wave.pdf).  You can also find derivations in References [Brown, Asmar]."
+      "The most well known second order hyperbolic equation is the wave equation,<br/><br/> $\\frac{\\partial^2 u}{\\partial t^2} = c^2\\frac{\\partial^2 u}{\\partial x^2}$<br/> <br/>and we will study variations of this equation in this section.  Dr. Joel Feldman from the University of British Columbia has a very well written derivation of the wave equation that you can find [here](http://www.math.ubc.ca/~feldman/m256/wave.pdf).  You can also find derivations in References [Brown, Asmar]."
      ]
     },
     {
@@ -88,16 +82,10 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Let's say that we have a string of length $L$ that is fixed at both ends and has a wave speed of $c$.  We've already decided what our boundary conditions are, but what about our initial conditions?  What options could we have?  "
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "The most common is to define an initial position and an initial velocity so our final problem statement is<br/>\n",
-      "$\\frac{\\partial^2 u}{\\partial t^2} = c^2\\frac{\\partial^2 u}{\\partial x^2}$ <br/> \n",
-      "With boundary conditions: $u(0,t) = u(L,t) = 0$ <br/> \n",
+      "Let's say that we have a string of length $L$ that is fixed at both ends and has a wave speed of $c$.  We've already decided what our boundary conditions are, but what about our initial conditions?  What options could we have?  <br/><br/>\n",
+      "The most common is to define an initial position and an initial velocity so our final problem statement is<br/><br/>\n",
+      "$\\frac{\\partial^2 u}{\\partial t^2} = c^2\\frac{\\partial^2 u}{\\partial x^2}$ <br/> <br/>\n",
+      "With boundary conditions: $u(0,t) = u(L,t) = 0$ <br/> <br/>\n",
       "And initial conditions: $u(x,0) = f(x)$ and $\\frac{\\partial u}{\\partial t} = g(x)$"
      ]
     },
@@ -113,41 +101,20 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "So we have two second order terms in our governing equation.  We also have a first order term in in our initial conditions, but we'll get to that later.  We need to match our numerical scheme with the physics of our problem.  We know that waves can travel in either direction, so we don't want to introduce a numerical bias that is only forward or backwards.  We will start by discretizing our governing equation with central difference in both time and space."
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "Recall that the central difference approximation for a second order derivative is:<br/>\n",
-      "$\\frac{d^2 u}{ds^2} \\approx \\frac{u_{i+1}-2u_i+u_{i-1}}{\\Delta s^2}$<br/>\n",
-      "Using this definition, rewrite our discretized governing equation and solve for $u_i^{n+1}$."
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "Using this definition, let's rewrite our discretized governing equation and solve for $u_i^{n+1}$.  We'll step through it together the first time."
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "Initially rewriting the derivative terms will give us:<br/>\n",
-      "$\\frac{u_i^{n+1}-2u_i^n+u_i^{n-1}}{\\Delta t^2} = c^2\\frac{u_{i+1}^n-2u_i^n+u_{i-1}^n}{\\Delta t^2}$<br/>\n",
-      "If we make the following substiution, $\\lambda = \\frac{c\\Delta t}{\\Delta x}$, and solve for $u_i^{n+1}$, we get:<br/>\n",
-      "$u_i^{n+1} = 2u_i^n(1-\\lambda^2)+\\lambda^2(u_{i+1}^n+u_{i-1}^n)-u_i^{n-1}$<br/>\n",
-      "Be sure that you can get the same result before moving on."
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "If you notice, our discretized governing equation will require values from the previous two time steps meaning that our method is not self starting.  So just like Congress, we are going to have to give it a kickstart to get any meaningful work out of it.  But unlike Congress, our method will continue to work until we tell it to stop!"
+      "So we have two second order terms in our governing equation.  We also have a first order term in in our initial conditions, but we'll get to that later.  We need to match our numerical scheme with the physics of our problem.  We know that waves can travel in either direction, so we don't want to introduce a numerical bias that is only forward or backwards.  We will start by discretizing our governing equation with central difference in both time and space.<br/><br/>\n",
+      "Recall that the central difference approximation for a second order derivative is:<br/><br/>\n",
+      "$\\frac{d^2 u}{ds^2} \\approx \\frac{u_{i+1}-2u_i+u_{i-1}}{\\Delta s^2}$<br/><br/>\n",
+      "Using this definition, rewrite our discretized governing equation and solve for $u_i^{n+1}$.<br/><br/>\n",
+      "Using this definition, let's rewrite our discretized governing equation and solve for $u_i^{n+1}$.  We'll step through it together the first time.<br/><br/>\n",
+      "Initially rewriting the derivative terms will give us:<br/><br/>\n",
+      "$\\frac{u_i^{n+1}-2u_i^n+u_i^{n-1}}{\\Delta t^2} = c^2\\frac{u_{i+1}^n-2u_i^n+u_{i-1}^n}{\\Delta t^2}$<br/><br/>\n",
+      "If we make the following substiution, $\\lambda = \\frac{c\\Delta t}{\\Delta x}$, and solve for $u_i^{n+1}$, we get:<br/><br/>\n",
+      "$u_i^{n+1} = 2u_i^n(1-\\lambda^2)+\\lambda^2(u_{i+1}^n+u_{i-1}^n)-u_i^{n-1}$<br/><br/>\n",
+      "Be sure that you can get the same result before moving on.<br/><br/>\n",
+      "If you notice, our discretized governing equation will require values from the previous two time steps meaning that our method is not self starting.  So just like Congress, we are going to have to give it a kickstart to get any meaningful work out of it.  But unlike Congress, our method will continue to work until we tell it to stop!<br/><br/>\n",
+      "Let's take a look at our $t=0$ array.  This is where our initial position will be stored and we can easily accomplish this by simply forcing $u(x,0)=f(x)$.<br/>\n",
+      "But this only takes care of the first array, and our method will require not only $u(0,x)$ to be populated but also $u(1,x)$ to be populated.<br/>\n",
+      "Hmmm...what to do, what to do.  We still have an initial condition that we haven't used yet,<br/> $\\frac{\\partial u(x,0)}{\\partial t}=g(x)$."
      ]
     },
     {
@@ -164,20 +131,22 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Using another finite difference, we can approximate $\\frac{\\partial u[0,x]}{\\partial t}=\\frac{u[1,x]-u[0,x]}{\\Delta x}$ or,<br/>\n",
-      "$u[1,x]=u[0,x]+\\Delta x g(x)$<br/>\n",
-      "Now we have numerical solutions for our first and second time steps.  But...we have a problem.<br/>\n",
-      "Did you notice that our approximation for the initial condition is only first order accurate and our governing equation has second order accuracy?  This means that our second time step, or $u[1,:]$ will be less accurate and will feed our iterative loop.  We can do better than this, right?"
+      "Using another finite difference, we can approximate<br/><br/>\n",
+      "$u(1,x)=u(0,x)+\\Delta x g(x)$<br/><br/>\n",
+      "Now we have numerical solutions for our first and second time steps.  <br/>\n",
+      "But...we have a problem.  Did you notice that our approximation for the initial condition is only first order accurate and our governing equation has second order accuracy?  This means that our second time step will be less accurate and will feed our iterative loop propagating our error.  We can do better than this, right?"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We can derive a $\\mathcal{O}(2)$ approximation for our first time step by considering the series expansion of $u(1,x)$, our second time step around our first time step, $u(0,x)$, which by definition would be a Maclaurin expansion.<br/>$u(1,x)=u(0,x)+\\Delta t\\frac{\\partial}{\\partial t} u(0,x)+\\frac{\\Delta t^2}{2}\\frac{\\partial^2}{\\partial t^2} u(0,x)+\\mathcal{O}(\\Delta t^3)$<br/>\n",
-      "Now we have our $\\mathcal{O}(2)$ expression for $u[1,:]$, but we need to find expressions for the terms $\\frac{\\partial}{\\partial t} u(0,x)$ and $\\frac{\\partial^2}{\\partial t^2} u(0,x)$<br/>\n",
-      "Using our governing equation we can show that $\\frac{\\partial^2}{\\partial t^2}u(0,x) = c^2f\"(x)$ and by definition $\\frac{\\partial}{\\partial t}u(0,x)=g(x)$<br/>\n",
-      "Finally, we can get an expression for $u[1,:]$ that is $\\mathcal{O}(2)$ accurate.  Derive this yourself.<br/>\n",
+      "We can derive a $\\mathcal{O}(2)$ approximation for our first time step by considering the series expansion of $u(1,x)$, our second time step around our first time step, $u(0,x)$, which by definition would be a Maclaurin expansion.<br/><br/>\n",
+      "$u(1,x)=u(0,x)+\\Delta t\\frac{\\partial}{\\partial t} u(0,x)+\\frac{\\Delta t^2}{2}\\frac{\\partial^2}{\\partial t^2} u(0,x)+\\mathcal{O}(\\Delta t^3)$<br/><br/>\n",
+      "Now we have our $\\mathcal{O}(2)$ expression for $u(1,x)$, but we need to find expressions for the terms<br/><br/>\n",
+      "$\\frac{\\partial}{\\partial t} u(0,x)$ and $\\frac{\\partial^2}{\\partial t^2} u(0,x)$<br/><br/>\n",
+      "Using our governing equation we can show that<br/><br/> $\\frac{\\partial^2}{\\partial t^2}u(0,x) = c^2f\"(x)$ and by definition $\\frac{\\partial}{\\partial t}u(0,x)=g(x)$<br/><br/>\n",
+      "Finally, we can get an expression for $u(1,x)$ that is $\\mathcal{O}(2)$ accurate.  Derive this yourself.<br/>\n",
       "Hint: Since we don't want to assume that $f\"(x)$ necessarily exists, break it into another central difference approximation.  You will find:<br/>\n",
       "$u(1,x_i) = (1-\\lambda^2)f(x_i)+\\frac{\\lambda^2}{2}(f(x_{i+1})+f(x_{i-1})+\\Delta t g(x)$"
      ]
