Trying italics again

--- a/final project.ipynb
+++ b/final project.ipynb
@@ -146,7 +146,7 @@
       "Now we have our $\\mathcal{O}(2)$ expression for $u(1,x)$, but we need to find expressions for the terms<br/><br/>\n",
       "$\\frac{\\partial}{\\partial t} u(0,x)$ and $\\frac{\\partial^2}{\\partial t^2} u(0,x)$<br/><br/>\n",
       "Using our governing equation we can show that<br/><br/> $\\frac{\\partial^2}{\\partial t^2}u(0,x) = c^2f\"(x)$ and by definition $\\frac{\\partial}{\\partial t}u(0,x)=g(x)$<br/><br/>\n",
-      "Finally, we can get an expression for $u(1,x)$ that is $\\mathcal{O}(2)$ accurate.  Derive this yourself.  $Hint$: Since we don't want to assume that $f\"(x)$ necessarily exists, break it into another central difference approximation.  You will find:<br/><br/>\n",
+      "Finally, we can get an expression for $u(1,x)$ that is $\\mathcal{O}(2)$ accurate.  Derive this yourself.  $\\mathit{Hint}$: Since we don't want to assume that $f\"(x)$ necessarily exists, break it into another central difference approximation.  You will find:<br/><br/>\n",
       "$u(1,x_i) = (1-\\lambda^2)f(x_i)+\\frac{\\lambda^2}{2}(f(x_{i+1})+f(x_{i-1})+\\Delta t g(x)$"
      ]
     },
