Added Image to Git

--- a/final project.ipynb
+++ b/final project.ipynb
@@ -154,30 +154,53 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "All that is left is to program a loop to start populating the third time step based on the first two and to continue until our final time!<br/>\n",
-      "We've already seen this before, so let's dive right in."
+      "All that is left is to program a loop to start populating the third time step based on the first two and to continue until our final time!  There is one last bit to discuss before we get started.  We are working with an explicit scheme, so of course Von Neumann stability analysis needs to be discussed.  Dr. Peter Olver from the University of Minnesota has an excellent breakdown of both a graphical argument and von Neumann analysis that can be found [here](http://www.math.umn.edu/~olver/num_/lnp.pdf).<br/><br/>\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "One last bit to discuss before we get started"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "First, let's try to model a guitar string plucked from an at rest position.  This can be modeled with the following problem:<br/><br/>\n",
+      "$\\frac{\\partial^2 u}{\\partial t^2}=64\\frac{\\partial^2 u}{\\partial x^2}$<br/>\n",
+      "$u(0,t) = u(10,t) = 0$<br/>\n",
+      "$u(x,0) = 0$<br/>\n",
+      "$\\frac{\\partial u(x,0)}{\\partial t} = 12cos(\\frac{\\pi(x-5)}{10})$"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "# Importing our libraries\n",
+      "import numpy as np\n",
+      "import matplotlib.pyplot as plt"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
+     "input": [
+      "#Define Initial Parameters\n",
+      "L = 10.\n",
+      "nx = 100\n",
+      "x = np.linspace(0,L,nx)\n",
+      "dx = L/(nx-1)\n",
+      "nt = 500\n",
+      "c = 8.0\n",
+      "dt = 0.5*dx/c #This comes from "
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
