--- a/final project.ipynb
+++ b/final project.ipynb
@@ -154,7 +154,8 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "All that is left is to program a loop to start populating the third time step based on the first two and to continue until our final time!  There is one last bit to discuss before we get started.  We are working with an explicit scheme, so of course Von Neumann stability analysis needs to be discussed.  Dr. Peter Olver from the University of Minnesota has an excellent breakdown of both a graphical argument and von Neumann analysis that can be found [here](http://www.math.umn.edu/~olver/num_/lnp.pdf).<br/><br/>\n"
+      "All that is left is to program a loop to start populating the third time step based on the first two and to continue until our final time!  There is one last bit to discuss before we get started.  We are working with an explicit scheme, so of course Von Neumann stability analysis needs to be discussed.  Dr. Peter Olver from the University of Minnesota has an excellent breakdown of both a graphical argument and von Neumann analysis that can be found [here](http://www.math.umn.edu/~olver/num_/lnp.pdf).<br/><br/>\n",
+      "[image]("
      ]
     },
     {
